--- a/src/Infrastructure/InvisibleEmotionDetector.Infrastructure.csproj
+++ b/src/Infrastructure/InvisibleEmotionDetector.Infrastructure.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../Domain/InvisibleEmotionDetector.Domain.csproj" />
+    <ProjectReference Include="..\Application\InvisibleEmotionDetector.Application.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
